update http client and refactor inputstream